; ModuleID = '/home/carl/AnghaBench/mongoose/test/ccgi-1.2/extr_ccgi.c_CGI_decode_query.c'
source_filename = "/home/carl/AnghaBench/mongoose/test/ccgi-1.2/extr_ccgi.c_CGI_decode_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @CGI_decode_query(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = icmp eq i8* %14, null
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = load i32*, i32** %4, align 8
  store i32* %17, i32** %3, align 8
  br label %138

18:                                               ; preds = %2
  %19 = load i8*, i8** %5, align 8
  %20 = call i64 @strlen(i8* %19)
  %21 = add nsw i64 %20, 1
  %22 = call i64 @mymalloc(i64 %21)
  %23 = inttoptr i64 %22 to i8*
  store i8* %23, i8** %6, align 8
  store i8* null, i8** %8, align 8
  store i8* null, i8** %7, align 8
  store i32 0, i32* %13, align 4
  store i32 0, i32* %10, align 4
  store i32 0, i32* %9, align 4
  br label %24

24:                                               ; preds = %131, %18
  %25 = load i32, i32* %13, align 4
  %26 = icmp eq i32 %25, 0
  br i1 %26, label %27, label %134

27:                                               ; preds = %24
  %28 = load i8*, i8** %5, align 8
  %29 = load i32, i32* %9, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds i8, i8* %28, i64 %30
  %32 = load i8, i8* %31, align 1
  %33 = sext i8 %32 to i32
  switch i32 %33, label %120 [
    i32 61, label %34
    i32 0, label %56
    i32 38, label %57
    i32 43, label %82
    i32 37, label %88
  ]

34:                                               ; preds = %27
  %35 = load i8*, i8** %7, align 8
  %36 = icmp ne i8* %35, null
  br i1 %36, label %37, label %38

37:                                               ; preds = %34
  br label %120

38:                                               ; preds = %34
  %39 = load i8*, i8** %7, align 8
  %40 = icmp eq i8* %39, null
  br i1 %40, label %41, label %55

41:                                               ; preds = %38
  %42 = load i32, i32* %10, align 4
  %43 = icmp sgt i32 %42, 0
  br i1 %43, label %44, label %55

44:                                               ; preds = %41
  %45 = load i8*, i8** %6, align 8
  store i8* %45, i8** %7, align 8
  %46 = load i8*, i8** %6, align 8
  %47 = load i32, i32* %10, align 4
  %48 = add nsw i32 %47, 1
  store i32 %48, i32* %10, align 4
  %49 = sext i32 %47 to i64
  %50 = getelementptr inbounds i8, i8* %46, i64 %49
  store i8 0, i8* %50, align 1
  %51 = load i8*, i8** %6, align 8
  %52 = load i32, i32* %10, align 4
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds i8, i8* %51, i64 %53
  store i8* %54, i8** %8, align 8
  br label %55

55:                                               ; preds = %44, %41, %38
  br label %131

56:                                               ; preds = %27
  store i32 1, i32* %13, align 4
  br label %57

57:                                               ; preds = %27, %56
  %58 = load i8*, i8** %6, align 8
  %59 = load i32, i32* %10, align 4
  %60 = sext i32 %59 to i64
  %61 = getelementptr inbounds i8, i8* %58, i64 %60
  store i8 0, i8* %61, align 1
  %62 = load i8*, i8** %7, align 8
  %63 = icmp eq i8* %62, null
  br i1 %63, label %64, label %73

64:                                               ; preds = %57
  %65 = load i32, i32* %10, align 4
  %66 = icmp sgt i32 %65, 0
  br i1 %66, label %67, label %73

67:                                               ; preds = %64
  %68 = load i8*, i8** %6, align 8
  store i8* %68, i8** %7, align 8
  %69 = load i8*, i8** %6, align 8
  %70 = load i32, i32* %10, align 4
  %71 = sext i32 %70 to i64
  %72 = getelementptr inbounds i8, i8* %69, i64 %71
  store i8* %72, i8** %8, align 8
  br label %73

73:                                               ; preds = %67, %64, %57
  %74 = load i8*, i8** %7, align 8
  %75 = icmp ne i8* %74, null
  br i1 %75, label %76, label %81

76:                                               ; preds = %73
  %77 = load i32*, i32** %4, align 8
  %78 = load i8*, i8** %7, align 8
  %79 = load i8*, i8** %8, align 8
  %80 = call i32* @CGI_add_var(i32* %77, i8* %78, i8* %79)
  store i32* %80, i32** %4, align 8
  br label %81

81:                                               ; preds = %76, %73
  store i32 0, i32* %10, align 4
  store i8* null, i8** %8, align 8
  store i8* null, i8** %7, align 8
  br label %131

82:                                               ; preds = %27
  %83 = load i8*, i8** %6, align 8
  %84 = load i32, i32* %10, align 4
  %85 = add nsw i32 %84, 1
  store i32 %85, i32* %10, align 4
  %86 = sext i32 %84 to i64
  %87 = getelementptr inbounds i8, i8* %83, i64 %86
  store i8 32, i8* %87, align 1
  br label %131

88:                                               ; preds = %27
  %89 = load i8*, i8** %5, align 8
  %90 = load i32, i32* %9, align 4
  %91 = add nsw i32 %90, 1
  %92 = sext i32 %91 to i64
  %93 = getelementptr inbounds i8, i8* %89, i64 %92
  %94 = load i8, i8* %93, align 1
  %95 = call i32 @hex(i8 signext %94)
  store i32 %95, i32* %11, align 4
  %96 = icmp sge i32 %95, 0
  br i1 %96, label %97, label %119

97:                                               ; preds = %88
  %98 = load i8*, i8** %5, align 8
  %99 = load i32, i32* %9, align 4
  %100 = add nsw i32 %99, 2
  %101 = sext i32 %100 to i64
  %102 = getelementptr inbounds i8, i8* %98, i64 %101
  %103 = load i8, i8* %102, align 1
  %104 = call i32 @hex(i8 signext %103)
  store i32 %104, i32* %12, align 4
  %105 = icmp sge i32 %104, 0
  br i1 %105, label %106, label %119

106:                                              ; preds = %97
  %107 = load i32, i32* %11, align 4
  %108 = shl i32 %107, 4
  %109 = load i32, i32* %12, align 4
  %110 = add nsw i32 %108, %109
  %111 = trunc i32 %110 to i8
  %112 = load i8*, i8** %6, align 8
  %113 = load i32, i32* %10, align 4
  %114 = add nsw i32 %113, 1
  store i32 %114, i32* %10, align 4
  %115 = sext i32 %113 to i64
  %116 = getelementptr inbounds i8, i8* %112, i64 %115
  store i8 %111, i8* %116, align 1
  %117 = load i32, i32* %9, align 4
  %118 = add nsw i32 %117, 2
  store i32 %118, i32* %9, align 4
  br label %131

119:                                              ; preds = %97, %88
  br label %120

120:                                              ; preds = %27, %119, %37
  %121 = load i8*, i8** %5, align 8
  %122 = load i32, i32* %9, align 4
  %123 = sext i32 %122 to i64
  %124 = getelementptr inbounds i8, i8* %121, i64 %123
  %125 = load i8, i8* %124, align 1
  %126 = load i8*, i8** %6, align 8
  %127 = load i32, i32* %10, align 4
  %128 = add nsw i32 %127, 1
  store i32 %128, i32* %10, align 4
  %129 = sext i32 %127 to i64
  %130 = getelementptr inbounds i8, i8* %126, i64 %129
  store i8 %125, i8* %130, align 1
  br label %131

131:                                              ; preds = %120, %106, %82, %81, %55
  %132 = load i32, i32* %9, align 4
  %133 = add nsw i32 %132, 1
  store i32 %133, i32* %9, align 4
  br label %24

134:                                              ; preds = %24
  %135 = load i8*, i8** %6, align 8
  %136 = call i32 @free(i8* %135)
  %137 = load i32*, i32** %4, align 8
  store i32* %137, i32** %3, align 8
  br label %138

138:                                              ; preds = %134, %16
  %139 = load i32*, i32** %3, align 8
  ret i32* %139
}

declare dso_local i64 @mymalloc(i64) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32* @CGI_add_var(i32*, i8*, i8*) #1

declare dso_local i32 @hex(i8 signext) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
